--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
 		}
 	},
 	"require": {
-		"typo3/cms-core": "^12.0 || ^13.0",
+		"typo3/cms-core": "^12.0 || ^13.0"
 	},
 	"extra": {
 		"typo3/cms": {
